--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "datatables.net-dt": "^1.10.12",
     "datatables.net": "^1.10.12",
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "jquery-ui": "^1.12.0"
   }
 }
